# mist-protocol

./: .gitignore  CLAUDE.md  README.md  SUI_ENCRYPTED_SWAP_DESIGN.md  package-lock.json  pnpm-lock.yaml  test-seal.sh  update.txt
.github/ISSUE_TEMPLATE/: bug.md  plan.md  task.md
backend/: .gitignore  Cargo.toml  README.md  run.sh
backend-cetus/: Cargo.toml  README.md
backend-cetus/src/: lib.rs
backend-seal/: Cargo.toml
backend-seal/src/: main.rs
backend-seal/src/apps/mist-protocol/: intent_processor.rs  mod.rs  seal_config.yaml  seal_encryption.rs  seal_test.rs  seal_types.rs  swap_executor.rs
backend/src/: lib.rs  main.rs
backend/src/apps/cetus/: mod.rs  routes.rs  transaction.rs
backend/src/apps/flowx/: config.rs  mod.rs  transaction.rs
backend/src/apps/flowx/routes/: mod.rs  pool.rs  swap.rs  transaction.rs
backend/src/apps/flowx/services/: flowx.rs  mod.rs
backend/src/apps/flowx/utils/: math.rs
backend/src/apps/mist-protocol/: intent_processor.rs  mod.rs  seal_config.yaml  seal_test.rs  seal_types.rs  swap_executor.rs
cetus-axum-integration/: .gitignore  README.md
cetus-axum-integration/backend/: .env.example
cetus-axum-integration/backend/src/: cetus.rs  config.rs  main.rs  transaction.rs
cetus-axum-integration/docs/: API.md  BACKEND.md  FRONTEND.md
cetus-axum-integration/frontend/: package.json
cetus-axum-integration/frontend/components/: CetusSwap.tsx
cetus-axum-integration/frontend/pages/: index.tsx
cetus-axum-integration/frontend/styles/: globals.css
cetus-swap/: QUICKSTART.md  README.md
cetus-swap/backend/: Cargo.toml
cetus-swap/backend/src/: cetus.rs  config.rs  main.rs
cetus-swap/docs/: CETUS.md
cetus-swap/frontend/: package-lock.json
cetus-swap/frontend/pages/: _app.tsx
contracts/: ESCROW_UNDERSTANDING.md  TESTING.md
contracts/enclave/: Move.toml  Published.toml
contracts/mist_protocol/: Move.toml  Published.toml
docs/: ARCHITECTURE.md  CONFIDENTIAL_TOKEN_DESIGN.md  ISSUE_HUNG.md  ISSUE_MAX.md  ISSUE_NIKOLA.md  NAUTILUS_DEPLOYMENT.md  PRIVACY_RELAYER_DESIGN.md  SETUP.md  SIGNING_SOLUTION.md  SPENDING_KEYS_DESIGN.md  TEAM_TASKS.md  UPDATES.md  intent-queue-architecture.md  private-tx.md
docs/development/: BACKEND_ORGANIZATION.md  DEVELOPER_GUIDE.md  ENCRYPTION_AND_POINTER.md  IMPLEMENTATION_TASKS.md  SEAL_DECRYPT_AXUM.md  SEAL_SETUP.md  SEAL_TESTING_GUIDE.md  VAULT_ARCHITECTURE.md
docs/examples/x-wallet-dev/apps/enclave-monitor/: .env.example  Cargo.toml
docs/examples/x-wallet-dev/apps/enclave-monitor/src/: config.rs  main.rs  monitor.rs
docs/examples/x-wallet-dev/apps/twitter-poller/: .env.example  Cargo.toml
docs/examples/x-wallet-dev/apps/twitter-poller/src/: backend_client.rs  config.rs  main.rs  poller.rs  twitter_adapter.rs
docs/examples/x-wallet-dev/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.indexer  PLAN.md  README.md  docker-compose.yml
docs/examples/x-wallet-dev/backend/.cargo/: config.toml
docs/examples/x-wallet-dev/backend/migrations/: 001_init.sql  002_add_nft_metadata.sql  003_add_nft_transfers.sql  004_performance_indexes.sql  005_add_sequence_ordering.sql  006_add_constraints.sql  007_add_avatar_url.sql  008_add_from_address.sql  009_drop_constraints.sql  010_separate_transfer_tables.sql
docs/examples/x-wallet-dev/backend/scripts/: twitterapi-cli.sh
docs/examples/x-wallet-dev/backend/src/: config.rs  constants.rs  error.rs  error_messages.rs  lib.rs  main.rs
docs/examples/x-wallet-dev/backend/src/api/: accounts.rs  auth.rs  config.rs  mod.rs  monitor.rs  sponsor.rs  transactions.rs  tweets.rs  types.rs  wallet.rs
docs/examples/x-wallet-dev/backend/src/clients/: enclave.rs  enoki.rs  mod.rs  redis_client.rs  slack.rs  sui_client.rs  sui_rpc_client.rs  sui_transaction.rs  twitter.rs
docs/examples/x-wallet-dev/backend/src/db/: mod.rs  models.rs
docs/examples/x-wallet-dev/backend/src/indexer/: cursor.rs  event_fetcher.rs  event_processor.rs  mod.rs  types.rs
docs/examples/x-wallet-dev/backend/src/indexer/handlers/: account_created.rs  coin_deposited.rs  coin_transferred.rs  coin_withdrawn.rs  handle_updated.rs  mod.rs  nft_deposited.rs  nft_transferred.rs  nft_withdrawn.rs  wallet_linked.rs
docs/examples/x-wallet-dev/backend/src/poller/: mod.rs
docs/examples/x-wallet-dev/backend/src/processor/: mod.rs  worker.rs
docs/examples/x-wallet-dev/backend/src/services/: account_cache.rs  mod.rs
docs/examples/x-wallet-dev/backend/src/webhook/: command_validator.rs  handler.rs  mod.rs  signature.rs
docs/examples/x-wallet-dev/backend/tests/: coin_tests.rs  unit_tests.rs
docs/examples/x-wallet-dev/backend/tests/common/: mod.rs
enclave/: AWS_QUICKSTART.md  Containerfile  Makefile  deploy.sh  setup-aws.sh
enclave/docs/: DEPLOYMENT.md
frontend/: README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: BalanceCard.tsx  CetusSwapCard.tsx  ConnectButton.tsx  DepositCard.tsx  FlowXSwapCard.tsx  StealthOutputsCard.tsx  SwapCard.tsx  TransactionHistory.tsx  UnwrapCard.tsx  WrapCard.tsx
frontend/hooks/: useDepositNotes.ts  useVault.ts
frontend/lib/: deposit-notes.ts  relayer.ts  seal-vault.ts
frontend/public/: site.webmanifest
nautilus/: .claude_context  AWS_QUICKSTART.md  Containerfile  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md  expose_enclave.sh
nautilus/docs/: ANALYSIS.md  MIST_PROTOCOL_DESIGN.md  NAUTILUS_DEEP_DIVE.md  NAUTILUS_FEASIBILITY.md  NAUTILUS_FOR_MIST_PROTOCOL.md  NAUTILUS_STRATEGY.md  TROUBLESHOOTING.md
ref/: hackathon-prd.md  nautilus.md  seal.md  walrus.md
ref/encifher/: ANALYSIS_INDEX.md  ANALYSIS_README.md  ARCHITECTURE_ANALYSIS.md  CODE_EVIDENCE.md  FEATURE_MATRIX.txt  IMPLEMENTATION_VERIFICATION.md
ref/seal-encryption-fe/: contract.move  encrypt.md
scripts/: deploy.sh
systemd/: mist-enclave.service  mist-vsock-proxy.service
temp/: CONTRIBUTING.md  ISSUES.md
tx-signer/: Cargo.toml  README.md
tx-signer/src/: main.rs
(+121 files in other folders)
