[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0.228"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
dotenv = "0.15"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
regex = { version = "1.5", optional = true }
hex = "0.4"
base64 = "0.21"
bech32 = "0.9"

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "86a9e06", optional = true }
sui-crypto = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["ed25519"], rev = "86a9e06", optional = true }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", optional = true }
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types", optional = true }
sui-json-rpc-api = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-api", optional = true }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto", optional = true }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", optional = true }
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types", optional = true }
seal-sdk = { git = "https://github.com/MystenLabs/seal", rev = "608d30caba1d1fbf5f1d82e5a8e6280010fd3609", package = "seal-sdk", optional = true }
crypto = { git = "https://github.com/MystenLabs/seal", rev = "608d30caba1d1fbf5f1d82e5a8e6280010fd3609", package = "crypto", optional = true }

# Additional dependencies for Cetus and FlowX
thiserror = { version = "1", optional = true }
dotenvy = { version = "0.15", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
default = ["mist-protocol", "cetus"]
mist-protocol = ["sui-crypto", "sui-sdk-types", "sui-sdk", "sui-types", "sui-json-rpc-api", "shared-crypto", "seal-sdk", "crypto"]
cetus = ["sui-sdk", "sui-types"]
flowx = ["sui-sdk", "sui-keys", "sui-types", "shared-crypto", "move-core-types", "thiserror", "dotenvy", "num-bigint", "num-traits"]