[package]
name = "cetus-axum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
bcs = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
