[package]
name = "enclave-monitor"
version = "0.1.0"
edition = "2021"
description = "Monitor XWallet Enclave health and send Slack notifications"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
